--- a/style.css
+++ b/style.css
@@ -1,68 +1,65 @@
-
-::before,
-::after{
-    box-sizing: border-box;
+* {
+    padding: 0;
+    margin: 0;
 }
 
-.navList{
+.navList {
     background-color: black;
     display: flex;
     color: white;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 10px;
     min-height: 1em;
     align-items: center;
     list-style: none;
+    width: viewport;
 }
 
-#SecretTrick{
+#SecretTrick {
     color: rgb(0, 0, 0);
 }
 
-#signOut{
-    background-color:blue;
+#signOut {
+    background-color: blue;
 }
-
 /*   --------------after nav bar------------------------- */
-.Wrapper{
-    display: flex;
-    flex-wrap: wrap;
+.Wrapper {
+    border-width: 1px;
+    border-color: black;
+    background-color: gold;
+    align-items: start;
+    border-style: solid;
     width: viewport;
+    height: 700px;
     padding: 1em;
-    align-items:center;
-    justify-content:space-around;
 }
 
-
-.Container{
+.Container {
     display: flex;
-    height: 500px;
-    flex-basis: 100%;
-    justify-content: center;
-    align-items: center;
+    min-width: 380px;
+    min-height: 480px;
     border-style: solid;
-    border: width 1px;
+    border-width: 1px;
     border-color: black;
+    background-color: royalblue;
+    justify-content: space-between;
 }
 
-.Left{
-    display: flex;
-    flex-direction: column;
-    flex-basis: 100%;
-    flex: 1;
+.Left {
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    width: 3000px;
+    min-height: 200px;
+    background-color: transparent;
+}
+.Right {
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
     width: 200px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: black;
+    min-height: 200px;
+    background-color: transparent;
 }
 
-.Right{
-    display: flex;
-    flex-direction: column;
-    flex-basis:100%;
-    flex: 1;
-    width: 200px;    
-    border-style: solid;
-    border-width: 1px;
-    border-color: black;
-}
+/* ------User Card----- */
